--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
             
             <div class="bg-white p-6 rounded-xl shadow-lg">
                 <h2 class="text-xl font-bold mb-4 text-primary-800">Acciones Rápidas</h2>
-                <div class="space-y-3">
-                    <button class="w-full px-4 py-3 bg-green-600 text-white rounded-lg hover:bg-green-700 transition-colors">
+                <div class="space-y-3"> <!-- CORRECCIÓN: Cambiado </div> por <div> -->
+                    <button onclick="openNewLoanModal()" class="w-full px-4 py-3 bg-green-600 text-white rounded-lg hover:bg-green-700 transition-colors">
                         <i class="fas fa-plus mr-2"></i> Nuevo Préstamo
                     </button>
                     <button class="w-full px-4 py-3 bg-green-600 text-white rounded-lg hover:bg-green-700 transition-colors">
@@ -833,4 +833,5 @@
 </div>
 </body>
 </html>
+
 
