--- a/index.html
+++ b/index.html
@@ -6,26 +6,31 @@
     <title>Juegos de Préstamos</title>
     <!-- Favicon (se usará el mismo logo) -->
     <link rel="icon" type="image/png" href="escudo.png">
+    
+    <!-- ENLAZAR ARCHIVO CSS EXTERNO -->
+    <link rel="stylesheet" href="styles.css">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- ... resto del head ... -->
     <script>
         tailwind.config = {
             theme: {
                 extend: {
                     colors: {
                         primary: {
-                            500: '#1b5e20',
-                            600: '#2e7d32',
-                            700: '#388e3c',
-                            800: '#1b5e20',
+                            500: '#1b6288',
+                            600: '#267432',
+                            700: '#338626',
+                            800: '#1b6288',
                         },
                         secondary: {
-                            500: '#1b5e20',
-                            600: '#2e7d32',
-                            700: '#388e3c',
-                            800: '#1b5e20',
+                            500: '#1b6288',
+                            600: '#267432',
+                            700: '#338626',
+                            800: '#1b6288',
                         }
                     }
                 }
@@ -951,6 +956,7 @@ document.getElementById('newLoanModal').addEventListener('click', function(e) {
 </script>
 </body>
 </html>
+
 
 
 
